[metadata]
name = kernex
description = stencil computations in JAX
author = Mahmoud Asem
license = MIT
license_files = LICENSE
homepage = https://github.com/ASEM000
platforms = linux , osx, windows
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]

packages = 
    kernex
python_requires = 
    ~=3.8
install_requires = 
    jax>=0.3.14
    



[options.extras_require]
testing = 
    pytest >=6.0
    pytest-cov >=2.0
    tox >=3.24
    mypy>=0.910


[options.package_data]
kernex = py.typed




[flake8]
max-line-length = 140
extend-ignore = D1, D2, E1, E2, E3, E501, W1, W2, W3, W5

